--- a/examples/test_random_dense_QCQP_unique_inequality_(ball)_constraint.ipynb
+++ b/examples/test_random_dense_QCQP_unique_inequality_(ball)_constraint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -12,13 +12,13 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=2\n",
+      "Number of variables: n=2\n",
       "====================\n",
       "Number of inequality constraints: l_g=1\n",
       "====================\n",
       "Number of equality constraints: l_h=1\n",
       "====================\n",
-      "Relaxed order: k=2\n"
+      "Relaxation order: k=2\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
     "#for n in N\n",
     "l_h=ceil(Int32, n/4)\n",
     "\n",
-    "println(\"Number of variable: n=\",n)\n",
+    "println(\"Number of variables: n=\",n)\n",
     "println(\"====================\")\n",
     "\n",
     "@polyvar x[1:n]# variables\n",
@@ -70,7 +70,7 @@
     "\n",
     "k=2\n",
     "\n",
-    "println(\"Relaxed order: k=\",k)\n",
+    "println(\"Relaxation order: k=\",k)\n",
     "    \n",
     "# include(\"../src/SpectralSOS.jl\")\n",
     "# using .SpectralSOS\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,19 +103,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**SumOfSquares+Mosek:\n",
+      "OPTIMAL\n",
+      "opt_val=-1.8758348312780548\n",
+      "  0.032116 seconds (26.02 k allocations: 1.727 MiB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module SpectralSOS.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1.8758348312780548"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# include(\"../src/SpectralSOS.jl\")\n",
-    "# using .SpectralSOS\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
-    "# opt_val = SpectralSOS.SumofSquares_POP(x,f,g,h,k)"
+    "opt_val = SpectralSOS.SumofSquares_POP(x,f,g,h,k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -123,26 +151,23 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n"
+      "**Converting the moment relaxation to the standard SDP:\n",
+      "  Size of psd matrix: sk=10\n",
+      "  Number of trace equality constraints: m=41\n",
+      "  0.041876 seconds (52.96 k allocations: 2.766 MiB)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Size of psd matrix: sk=10\n",
-      "  Number of equality trace constraints: m=41\n",
-      "  3.516407 seconds (5.25 M allocations: 259.973 MiB, 10.51% gc time)\n",
       "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
@@ -158,37 +183,34 @@
       "| Output: |\n",
       "-----------\n",
       "Termination:     1\n",
-      "N. iter.:        14\n",
-      "N. func. eval.:  14\n",
-      "Final value:     0.523438\n",
-      "Execution time:  0.359932\n",
-      "  2.321832 seconds (1.26 M allocations: 67.504 MiB, 1.02% gc time)\n",
+      "N. iter.:        26\n",
+      "N. func. eval.:  34\n",
+      "Final value:     0.371401\n",
+      "Execution time:  0.064606\n",
+      "  1.043456 seconds (721.37 k allocations: 39.918 MiB)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-0.6631280461157668\n",
+      "opt_val=-1.6376886729764037\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 1\n",
       "------------------------------------\n",
-      "atom 1 = [-0.6084259283270828, 0.7974682885087412, 5.265081773228263e-16]\n",
-      "  check gap of lower bound  = 0.002618131266453272\n",
-      "  check equality constraint 1 = 0.010656800788550469\n",
-      "  check equality constraint 2 = 0.006137781437733247\n",
+      "atom 1:\n",
       "####################################\n",
-      "Optimal solution: opt_sol = [-0.6084259283270828, 0.7974682885087412, 5.265081773228263e-16]\n",
+      "It is an approximate optimal solution!\n",
       "####################################\n",
-      "  0.532117 seconds (854.04 k allocations: 41.946 MiB, 2.80% gc time)\n",
-      "  6.495770 seconds (7.53 M allocations: 376.682 MiB, 6.28% gc time)\n",
-      "  6.928699 seconds (7.95 M allocations: 398.228 MiB, 5.89% gc time)\n"
+      "  0.000372 seconds (514 allocations: 35.500 KiB)\n",
+      "  1.091514 seconds (776.46 k allocations: 42.778 MiB)\n",
+      "  1.091794 seconds (777.01 k allocations: 42.798 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-0.6631280461157668, [-0.6084259283270828, 0.7974682885087412])"
+       "(-1.6376886729764037, [0.7391082972652827, 0.6790349058081361])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,14 +224,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Bounded trace property (BTP):\n",
+      "  Largest upper bound of psd matrix: bound_ak=15.0\n",
+      "  Number of blocks: numBloc=3\n",
+      "  Size of block-diagonal matrix: s=10\n",
+      "  Size of blocks: [6, 3, 1]\n",
+      "  Number of trace equality constraints: m=19\n",
+      " "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module SpectralSOS.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0.190007 seconds (238.16 k allocations: 12.082 MiB)\n",
+      "***LMBM solver:***\n",
+      "---------------\n",
+      "| Parameters: |\n",
+      "---------------\n",
+      "n:       19\n",
+      "maxtime: 300000.000000\n",
+      "na:      2\n",
+      "mcu:     5\n",
+      "mc:      7\n",
+      "rpar: \n",
+      "ipar: \n",
+      "-----------\n",
+      "| Output: |\n",
+      "-----------\n",
+      "Termination:     1\n",
+      "N. iter.:        125\n",
+      "N. func. eval.:  248\n",
+      "Final value:     0.081834\n",
+      "Execution time:  0.207352\n",
+      "####################################\n",
+      "opt_val = -1.6384761011225113\n",
+      "####################################\n",
+      "Dimension of the null space of Gram matrix = 1\n",
+      "------------------------------------\n",
+      "atom 1:\n",
+      "####################################\n",
+      "It is an approximate optimal solution!\n",
+      "####################################\n",
+      "  0.554713 seconds (640.96 k allocations: 35.416 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(-1.6384761011225113, [0.7700258693687868, 0.7094452699079621])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# include(\"../src/SpectralPOP.jl\")\n",
-    "# using .SpectralPOP \n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
-    "# opt_val,opt_sol = SpectralPOP.BTP_POP(x,f,g,h,k,R,EigAlg=\"Mix\",scale=true)"
+    "opt_val,opt_sol = SpectralSOS.BTP_POP(x,f,g,h,k,R,EigAlg=\"Mix\",scale=true)"
    ]
   },
   {
@@ -233,10 +322,10 @@
     }
    ],
    "source": [
-    "include(\"../src/SpectralSOS.jl\")\n",
-    "using .SpectralSOS\n",
+    "# include(\"../src/SpectralSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
-    "SpectralSOS.save_data(x,f,g,h,R)"
+    "# SpectralSOS.save_data(x,f,g,h,R)"
    ]
   },
   {
