--- a/examples/test_random_dense_equality_constrained_QCQP_on_sphere_first_order.ipynb
+++ b/examples/test_random_dense_equality_constrained_QCQP_on_sphere_first_order.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=2\n",
+      "Number of variables: n=2\n",
       "====================\n",
       "Number of equality constraints: l_h=2\n",
       "====================\n",
-      "Relaxed order: k=1\n"
+      "Relaxation order: k=1\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
     "\n",
     "l=ceil(Int32, n/4)\n",
     "\n",
-    "println(\"Number of variable: n=\",n)\n",
+    "println(\"Number of variables: n=\",n)\n",
     "println(\"====================\")\n",
     "\n",
     "@polyvar x[1:n]# variables\n",
@@ -71,7 +71,7 @@
     "\n",
     "k=Int64(1)\n",
     "\n",
-    "println(\"Relaxed order: k=\",k)\n",
+    "println(\"Relaxation order: k=\",k)\n",
     "\n",
     "\n",
     "# include(\"../src/SpectraSOS.jl\")\n",
@@ -84,15 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
@@ -101,7 +100,7 @@
        "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,9 +137,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
@@ -149,7 +146,7 @@
      "text": [
       "OPTIMAL\n",
       "opt_val=-4.26516473506338\n",
-      " 24.782780 seconds (38.00 M allocations: 1.943 GiB, 5.21% gc time)\n"
+      "  0.765599 seconds (830.12 k allocations: 106.513 MiB, 2.46% gc time)\n"
      ]
     },
     {
@@ -158,7 +155,7 @@
        "-4.26516473506338"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,27 +178,23 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n"
+      "**Converting the moment relaxation to the standard SDP:\n",
+      "  Size of psd matrix: sk=51\n",
+      "  Number of trace equality constraints: m=15\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Size of psd matrix: sk=51\n",
-      "  Number of equality trace constraints: m=15\n",
-      "  3.877711 seconds (6.42 M allocations: 419.185 MiB, 7.93% gc time)\n",
+      "  0.285289 seconds (1.31 M allocations: 167.556 MiB, 18.24% gc time)\n",
       "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
@@ -216,29 +209,29 @@
       "-----------\n",
       "| Output: |\n",
       "-----------\n",
-      "Termination:     1\n",
-      "N. iter.:        115\n",
-      "N. func. eval.:  278\n",
+      "Termination:     3\n",
+      "N. iter.:        122\n",
+      "N. func. eval.:  359\n",
       "Final value:     0.196681\n",
-      "Execution time:  0.830429\n",
-      "  3.186755 seconds (1.40 M allocations: 96.292 MiB, 1.20% gc time)\n",
+      "Execution time:  0.591644\n",
+      "  1.712977 seconds (889.10 k allocations: 76.946 MiB, 1.45% gc time)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-4.26516523445418\n",
+      "opt_val=-4.265164998945814\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 2\n",
-      "  0.010054 seconds (820 allocations: 307.234 KiB)\n",
-      "  7.082740 seconds (7.82 M allocations: 515.849 MiB, 4.88% gc time)\n"
+      "  0.003053 seconds (681 allocations: 299.016 KiB)\n",
+      "  2.002218 seconds (2.20 M allocations: 244.837 MiB, 3.84% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-4.26516523445418, Array{Float64,1}[])"
+       "(-4.265164998945814, Array{Float64,1}[])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -269,88 +262,43 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n",
+      "**Converting the moment relaxation to the standard SDP:\n",
       "  Size of psd matrix: sk=51\n",
-      "  Number of equality trace constraints: m=15\n"
+      "  Number of trace equality constraints: m=15\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.275088 seconds (1.31 M allocations: 167.556 MiB, 13.88% gc time)\n",
+      "  0.281807 seconds (1.31 M allocations: 167.560 MiB, 18.56% gc time)\n",
       "**SketchyCGAL solver:\n",
-      "- SketchyCGAL SDP Solver - Beta.V.0.0\n",
-      "--------------------------\n",
-      " iter=1 \n",
-      " stopObj=0.4438876109713039 \n",
-      " stopFeas=0.4328368822318199 \n",
-      " primalObj=-0.1584469637869582 \n",
-      "--------------------------\n",
-      " iter=2 \n",
-      " stopObj=0.5580318599693904 \n",
-      " stopFeas=0.3215567774873431 \n",
-      " primalObj=-0.2365851424928231 \n",
-      "--------------------------\n",
-      " iter=4 \n",
-      " stopObj=0.054059922474177624 \n",
-      " stopFeas=0.10058352437031498 \n",
-      " primalObj=-0.24508026191119062 \n",
-      "--------------------------\n",
-      " iter=8 \n",
-      " stopObj=-0.017411878293389527 \n",
-      " stopFeas=0.06297413656626959 \n",
-      " primalObj=-0.22015757211568585 \n",
-      "--------------------------\n",
-      " iter=16 \n",
-      " stopObj=-0.04764343234956364 \n",
-      " stopFeas=0.028980137039966682 \n",
-      " primalObj=-0.20665712665344455 \n",
-      "--------------------------\n",
-      " iter=32 \n",
-      " stopObj=0.012939680736132497 \n",
-      " stopFeas=0.009402599005073922 \n",
-      " primalObj=-0.1921939177103098 \n",
-      "--------------------------\n",
-      " iter=64 \n",
-      " stopObj=0.024333707178094854 \n",
-      " stopFeas=0.005708985831703279 \n",
-      " primalObj=-0.19037657794465332 \n",
-      "--------------------------\n",
-      " iter=128 \n",
-      " stopObj=0.003549758168459649 \n",
-      " stopFeas=0.002138230438158396 \n",
-      " primalObj=-0.19285392954742173 \n",
       "* status = stopping criteria met\n",
-      "  2.850724 seconds (4.32 M allocations: 1.175 GiB, 4.97% gc time)\n",
+      "  1.315798 seconds (616.09 k allocations: 620.380 MiB, 4.64% gc time)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-4.227364901558725\n",
+      "opt_val=-4.2122375326719395\n",
       "====================================\n",
       "Rank of moment matrix = 51\n",
-      "  0.005175 seconds (503 allocations: 155.094 KiB)\n",
-      "  3.131798 seconds (5.64 M allocations: 1.339 GiB, 5.74% gc time)\n"
+      "  0.000142 seconds (174 allocations: 135.656 KiB)\n",
+      "  1.598538 seconds (1.93 M allocations: 788.134 MiB, 7.09% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-4.227364901558725, Array{Float64,1}[])"
+       "(-4.2122375326719395, Array{Float64,1}[])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,24 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module SpectralPOP.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "include(\"../src/SpectralSOS.jl\")\n",
-    "using .SpectralSOS\n",
+    "# include(\"../src/SpectralSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
-    "g=Vector{Polynomial{true,Float64}}([])\n",
+    "# g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "SpectralSOS.save_data(x,f,g,h,R)"
+    "# SpectralSOS.save_data(x,f,g,h,R)"
    ]
   },
   {
