--- a/examples/test_random_dense_quadratics_on_sphere_run.ipynb
+++ b/examples/test_random_dense_quadratics_on_sphere_run.ipynb
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=2\n",
+      "Number of variables: n=2\n",
       "====================\n",
       "Number of equality constraints: l_h=1\n",
       "====================\n",
-      "Relaxed order: k=1\n"
+      "Relaxation order: k=1\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "\n",
     "#for n in N\n",
     "\n",
-    "println(\"Number of variable: n=\",n)\n",
+    "println(\"Number of variables: n=\",n)\n",
     "println(\"====================\")\n",
     "\n",
     "@polyvar x[1:n]# variables\n",
@@ -50,7 +50,7 @@
     "\n",
     "k=Int64(1)\n",
     "\n",
-    "println(\"Relaxed order: k=\",k)\n",
+    "println(\"Relaxation order: k=\",k)\n",
     "    \n",
     "\n",
     "    \n",
@@ -82,21 +82,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**SumOfSquares+Mosek:\n",
+      "OPTIMAL\n",
+      "opt_val=0.18538370552444292\n",
+      " 21.409210 seconds (37.50 M allocations: 1.859 GiB, 4.80% gc time)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.18538370552444292"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# include(\"../src/SpectralSOS.jl\")\n",
-    "# using .SpectralSOS\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
-    "# g=Vector{Polynomial{true,Float64}}([])\n",
+    "g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "# opt_val = SpectralSOS.SumofSquares_POP(x,f,g,h,k)"
+    "opt_val = SpectralSOS.SumofSquares_POP(x,f,g,h,k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -106,17 +127,14 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n"
+      "**Converting the moment relaxation to the standard SDP:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
@@ -124,8 +142,8 @@
      "output_type": "stream",
      "text": [
       "  Size of psd matrix: sk=3\n",
-      "  Number of equality trace constraints: m=2\n",
-      "  3.949576 seconds (5.30 M allocations: 261.358 MiB, 3.20% gc time)\n",
+      "  Number of trace equality constraints: m=2\n",
+      "  3.885560 seconds (5.16 M allocations: 254.307 MiB, 4.55% gc time)\n",
       "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
@@ -141,35 +159,33 @@
       "| Output: |\n",
       "-----------\n",
       "Termination:     1\n",
-      "N. iter.:        6\n",
-      "N. func. eval.:  6\n",
-      "Final value:     0.526213\n",
-      "Execution time:  0.348305\n",
-      "  3.498622 seconds (1.30 M allocations: 69.403 MiB, 1.06% gc time)\n",
+      "N. iter.:        5\n",
+      "N. func. eval.:  5\n",
+      "Final value:     -0.092297\n",
+      "Execution time:  0.412422\n",
+      "  2.766054 seconds (1.30 M allocations: 69.197 MiB)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-1.0124297886199771\n",
+      "opt_val=0.1853833338262159\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 1\n",
       "------------------------------------\n",
-      "atom 1 = [0.2970957189912433, 0.9531486023414487]\n",
-      "  check gap of lower bound  = 0.002398299808543891\n",
-      "  check equality constraint 1 = 0.0032418756116190384\n",
+      "atom 1:\n",
       "####################################\n",
-      "Optimal solution: opt_sol = [0.2970957189912433, 0.9531486023414487]\n",
+      "It is an approximate optimal solution!\n",
       "####################################\n",
-      "  0.500988 seconds (853.60 k allocations: 41.992 MiB)\n",
-      "  8.086154 seconds (7.61 M allocations: 380.012 MiB, 2.02% gc time)\n"
+      "  0.442327 seconds (536.16 k allocations: 26.376 MiB, 11.11% gc time)\n",
+      "  7.094668 seconds (7.00 M allocations: 349.913 MiB, 3.19% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-1.0124297886199771, [0.2970957189912433, 0.9531486023414487])"
+       "(0.1853833338262159, [-0.8083035840182136, -0.5862884079407549])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -194,21 +210,17 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n",
+      "**Converting the moment relaxation to the standard SDP:\n",
       "  Size of psd matrix: sk=3\n",
-      "  Number of equality trace constraints: m=2\n",
-      "  0.042809 seconds (50.92 k allocations: 2.544 MiB)\n"
+      "  Number of trace equality constraints: m=2\n",
+      "  0.042765 seconds (50.91 k allocations: 2.542 MiB)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
@@ -216,56 +228,25 @@
      "output_type": "stream",
      "text": [
       "**SketchyCGAL solver:\n",
-      "- SketchyCGAL SDP Solver - Beta.V.0.0\n",
-      "--------------------------\n",
-      " iter=1 \n",
-      " stopObj=0.5599304087552565 \n",
-      " stopFeas=0.3981126085090629 \n",
-      " primalObj=-0.22442689743191518 \n",
-      "--------------------------\n",
-      " iter=2 \n",
-      " stopObj=1.8022735812223871 \n",
-      " stopFeas=0.6061945311384341 \n",
-      " primalObj=-0.544535920381099 \n",
-      "--------------------------\n",
-      " iter=4 \n",
-      " stopObj=0.07802850543757345 \n",
-      " stopFeas=0.3612502052617371 \n",
-      " primalObj=-0.5714382922320893 \n",
-      "--------------------------\n",
-      " iter=8 \n",
-      " stopObj=0.12120188807416088 \n",
-      " stopFeas=0.022323014004172487 \n",
-      " primalObj=-0.4011010058868628 \n",
-      "--------------------------\n",
-      " iter=16 \n",
-      " stopObj=0.08012835931469875 \n",
-      " stopFeas=0.03991179296771478 \n",
-      " primalObj=-0.4612283542600056 \n",
-      "--------------------------\n",
-      " iter=32 \n",
-      " stopObj=0.19855992717647897 \n",
-      " stopFeas=0.0053532469010463424 \n",
-      " primalObj=-0.46148757791777384 \n",
       "* status = stopping criteria met\n",
-      "  2.931225 seconds (4.30 M allocations: 211.296 MiB, 1.34% gc time)\n",
+      "  1.189724 seconds (554.45 k allocations: 30.363 MiB)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-0.8819164573335363\n",
+      "opt_val=0.44634597575063534\n",
       "====================================\n",
       "Rank of moment matrix = 3\n",
-      "  0.003989 seconds (402 allocations: 22.578 KiB)\n",
-      "  2.983937 seconds (4.35 M allocations: 213.938 MiB, 1.31% gc time)\n"
+      "  0.000036 seconds (75 allocations: 3.563 KiB)\n",
+      "  1.232989 seconds (606.38 k allocations: 32.929 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-0.8819164573335363, Array{Float64,1}[])"
+       "(0.44634597575063534, Array{Float64,1}[])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,26 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "include(\"../src/SpectralSOS.jl\")\n",
-    "using .SpectralSOS\n",
+    "# include(\"../src/SpectralSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
-    "g=Vector{Polynomial{true,Float64}}([])\n",
+    "# g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "SpectralSOS.save_data(x,f,g,h,R)"
+    "# SpectralSOS.save_data(x,f,g,h,R)"
    ]
   },
   {
