--- a/examples/test_random_dense_QCQP_on_ball.ipynb
+++ b/examples/test_random_dense_QCQP_on_ball.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,13 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=2\n",
+      "Number of variables: n=2\n",
       "====================\n",
       "Number of inequality constraints: l_g=1\n",
       "====================\n",
       "Number of equality constraints: l_h=1\n",
       "====================\n",
-      "Relaxed order: k=2\n"
+      "Relaxation order: k=2\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
     "l_g=ceil(Int32, n/8)\n",
     "l_h=ceil(Int32, n/8)\n",
     "\n",
-    "println(\"Number of variable: n=\",n)\n",
+    "println(\"Number of variables: n=\",n)\n",
     "println(\"====================\")\n",
     "\n",
     "@polyvar x[1:n]# variables\n",
@@ -82,7 +82,7 @@
     "\n",
     "k=2\n",
     "\n",
-    "println(\"Relaxed order: k=\",k)\n",
+    "println(\"Relaxation order: k=\",k)\n",
     "    \n",
     "    \n",
     "# include(\"../src/SpectralSOS.jl\")\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,40 +116,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**SumOfSquares+Mosek:\n"
+      "**SumOfSquares+Mosek:\n",
+      "OPTIMAL\n",
+      "opt_val=-1.485282413992094\n",
+      "  0.030891 seconds (26.02 k allocations: 1.727 MiB)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPTIMAL\n",
-      "opt_val=0.3858272886713175\n",
-      " 22.758191 seconds (37.69 M allocations: 1.868 GiB, 5.32% gc time)\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.3858272886713175"
+       "-1.485282413992094"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,26 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Conpute upper bound 1\n",
-      "**Constant trace property (CTP):"
+      "**Computing the upper bound 1\n",
+      "**Constant trace property (CTP):\n",
+      "**Converting the moment relaxation to the standard SDP:\n",
+      "  Size of psd matrix: sk=10\n",
+      "  Number of trace equality constraints: m=41\n",
+      "  0.064075 seconds (52.93 k allocations: 2.764 MiB)\n",
+      "**LMBM solver:"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
@@ -190,11 +184,6 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**Convert moment relaxation to standard SDP:\n",
-      "  Size of psd matrix: sk=10\n",
-      "  Number of equality trace constraints: m=41\n",
-      "  3.635566 seconds (5.16 M allocations: 254.128 MiB, 3.55% gc time)\n",
-      "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
       "---------------\n",
@@ -209,42 +198,36 @@
       "| Output: |\n",
       "-----------\n",
       "Termination:     1\n",
-      "N. iter.:        77\n",
-      "N. func. eval.:  173\n",
-      "Final value:     0.186644\n",
-      "Execution time:  0.357704\n",
-      "  2.321828 seconds (1.29 M allocations: 69.316 MiB, 2.07% gc time)\n",
+      "N. iter.:        39\n",
+      "N. func. eval.:  107\n",
+      "Final value:     0.203463\n",
+      "Execution time:  0.100327\n",
+      "  1.291501 seconds (732.23 k allocations: 40.775 MiB, 2.37% gc time)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-0.9143633957358852\n",
+      "opt_val=-0.9967598490750429\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 2\n",
       "------------------------------------\n",
-      "atom 1 = [0.21754156444941705, 0.19064281326962237, -0.9581067898947042]\n",
-      "  check gap of lower bound  = 0.001967589749658827\n",
-      "  check equality constraint 1 = 0.0016631500482460482\n",
-      "  check equality constraint 2 = 0.0016376353567908453\n",
+      "atom 1:\n",
       "####################################\n",
-      "Optimal solution: opt_sol = [0.21754156444941705, 0.19064281326962237, -0.9581067898947042]\n",
+      "It is an approximate optimal solution!\n",
       "####################################\n",
       "------------------------------------\n",
-      "atom 2 = [0.21747488347461424, 0.19039832775786913, 0.9576979269650683]\n",
-      "  check gap of lower bound  = 0.0020897561088247807\n",
-      "  check equality constraint 1 = 0.0017658387900726935\n",
-      "  check equality constraint 2 = 0.0007321674684792612\n",
+      "atom 2:\n",
       "####################################\n",
-      "Optimal solution: opt_sol = [0.21747488347461424, 0.19039832775786913, 0.9576979269650683]\n",
+      "It is an approximate optimal solution!\n",
       "####################################\n",
-      "  0.441820 seconds (525.70 k allocations: 25.940 MiB)\n",
-      "  6.399898 seconds (6.97 M allocations: 349.416 MiB, 2.77% gc time)\n",
+      "  0.000869 seconds (819 allocations: 47.234 KiB)\n",
+      "  1.357110 seconds (787.00 k allocations: 43.609 MiB, 2.25% gc time)\n",
       "--------------------------\n",
-      "  Radius of big ball: R_bar=1.9143633957358852\n",
+      "  Radius of big ball: R_bar=1.996759849075043\n",
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n",
+      "**Converting the moment relaxation to the standard SDP:\n",
       "  Size of psd matrix: sk=15\n",
-      "  Number of equality trace constraints: m=96\n",
-      "  0.000817 seconds (5.03 k allocations: 497.156 KiB)\n",
+      "  Number of trace equality constraints: m=96\n",
+      "  0.000690 seconds (5.03 k allocations: 497.125 KiB)\n",
       "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
@@ -259,48 +242,40 @@
       "-----------\n",
       "| Output: |\n",
       "-----------\n",
-      "Termination:     3\n",
-      "N. iter.:        368\n",
-      "N. func. eval.:  1287\n",
-      "Final value:     -0.043508\n",
-      "Execution time:  0.189178\n",
-      "  0.194147 seconds (230.92 k allocations: 24.378 MiB)\n",
+      "Termination:     1\n",
+      "N. iter.:        84\n",
+      "N. func. eval.:  125\n",
+      "Final value:     0.165394\n",
+      "Execution time:  0.027313\n",
+      "  0.028172 seconds (23.91 k allocations: 2.416 MiB)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=0.3695318462564311\n",
+      "opt_val=-1.4853281146896944\n",
       "====================================\n",
-      "Dimension of the null space of Gram matrix = 3\n",
+      "Dimension of the null space of Gram matrix = 2\n",
       "------------------------------------\n",
-      "atom 1 = [0.15011954032950647, 0.16173244712697815, -0.5969696997075487, -9.237153362758837]\n",
-      "  check gap of lower bound  = 0.10268835663796366\n",
-      "  check equality constraint 1 = 0.036667855672358765\n",
-      "  check equality constraint 2 = 0.594933916788656\n",
-      "  check equality constraint 3 = 83.81570493460235\n",
+      "atom 1:\n",
+      "####################################\n",
+      "It is an approximate optimal solution!\n",
+      "####################################\n",
       "------------------------------------\n",
-      "atom 2 = [0.13411065983992454, 0.1581404328740376, 0.42201558274638107, -0.5200788033568353]\n",
-      "  check gap of lower bound  = 0.1270186320188778\n",
-      "  check equality constraint 1 = 0.04436310266291414\n",
-      "  check equality constraint 2 = 0.7789087823269445\n",
-      "  check equality constraint 3 = 1.4227902163617518\n",
-      "------------------------------------\n",
-      "atom 3 = [-0.9943678423585419, -3.2835035207553416, -0.2971290640024443, 6.365980254981962]\n",
-      "  check gap of lower bound  = 11.301713448054466\n",
-      "  check equality constraint 1 = 3.6892865847164154\n",
-      "  check equality constraint 2 = 10.858448457404474\n",
-      "  check equality constraint 3 = 50.469789668488794\n",
-      "  0.230339 seconds (363.07 k allocations: 18.243 MiB, 26.16% gc time)\n",
-      "  0.425722 seconds (600.02 k allocations: 43.128 MiB, 14.16% gc time)\n",
-      "  7.244521 seconds (8.03 M allocations: 415.610 MiB, 3.28% gc time)\n"
+      "atom 2:\n",
+      "####################################\n",
+      "It is an approximate optimal solution!\n",
+      "####################################\n",
+      "  0.000680 seconds (952 allocations: 69.047 KiB)\n",
+      "  0.030025 seconds (30.93 k allocations: 2.994 MiB)\n",
+      "  1.387842 seconds (819.29 k allocations: 46.648 MiB, 2.20% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.3695318462564311, Array{Float64,1}[])"
+       "(-1.4853281146896944, [0.9643854815106718, 0.27124436510109684])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,25 +300,23 @@
       "  Largest upper bound of psd matrix: bound_ak=15.0\n",
       "  Number of blocks: numBloc=3\n",
       "  Size of block-diagonal matrix: s=10\n",
-      "  Size of blocks: "
+      "  Size of blocks: [6, 3, 1]\n",
+      "  Number of trace equality constraints: m=19\n",
+      " "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 3, 1]\n",
-      "  Number of equality trace constraints: m=19\n",
-      "  0.798077 seconds (1.06 M allocations: 52.774 MiB, 3.56% gc time)\n",
+      " 0.216143 seconds (238.16 k allocations: 12.082 MiB)\n",
       "***LMBM solver:***\n",
       "---------------\n",
       "| Parameters: |\n",
@@ -358,30 +331,30 @@
       "-----------\n",
       "| Output: |\n",
       "-----------\n",
-      "Termination:     3\n",
-      "N. iter.:        466\n",
-      "N. func. eval.:  1152\n",
-      "Final value:     -0.015635\n",
-      "Execution time:  0.758148\n",
+      "Termination:     1\n",
+      "N. iter.:        132\n",
+      "N. func. eval.:  241\n",
+      "Final value:     0.097616\n",
+      "Execution time:  0.248444\n",
       "####################################\n",
-      "opt_val = 0.30431621428112327\n",
+      "opt_val = -1.4869769682551168\n",
       "####################################\n",
       "Dimension of the null space of Gram matrix = 1\n",
       "------------------------------------\n",
-      "atom 1 = [0.0051439386904004476, 0.10037678718020229]\n",
-      "  check gap of lower bound  = -0.25609553961753134\n",
-      "  check inequality constraint 1 = 0.9898980404901297\n",
-      "  check equality constraint 1 = -0.11910164678262676\n",
-      "  2.188918 seconds (3.13 M allocations: 163.195 MiB, 3.80% gc time)\n"
+      "atom 1:\n",
+      "####################################\n",
+      "It is an approximate optimal solution!\n",
+      "####################################\n",
+      "  0.640567 seconds (638.87 k allocations: 35.186 MiB, 3.24% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.30431621428112327, Array{Float64,1}[])"
+       "(-1.4869769682551168, [0.9892418513303098, 0.28290025636016675])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,10 +379,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"../src/SpectralSOS.jl\")\n",
-    "using .SpectralSOS\n",
+    "# include(\"../src/SpectralSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
-    "SpectralSOS.save_data(x,f,g,h,R)"
+    "# SpectralSOS.save_data(x,f,g,h,R)"
    ]
   },
   {
