--- a/examples/test_random_dense_quadratic_on_sphere.ipynb
+++ b/examples/test_random_dense_quadratic_on_sphere.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,11 +17,11 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=5\n",
+      "Number of variables: n=2\n",
       "====================\n",
       "Number of equality constraints: l=1\n",
       "====================\n",
-      "Relaxed order: k=1\n"
+      "Relaxation order: k=1\n"
      ]
     }
    ],
@@ -30,10 +30,10 @@
     "\n",
     "println(\"***Problem setting***\")\n",
     "\n",
-    "n=5\n",
+    "n=2\n",
     "\n",
     "\n",
-    "println(\"Number of variable: n=\",n)\n",
+    "println(\"Number of variables: n=\",n)\n",
     "println(\"====================\")\n",
     "\n",
     "@polyvar x[1:n] #variables\n",
@@ -55,7 +55,7 @@
     "\n",
     "k=1 # relaxed order\n",
     "\n",
-    "println(\"Relaxed order: k=\",k)\n",
+    "println(\"Relaxation order: k=\",k)\n",
     "\n",
     "\n",
     "# include(\"../src/SpectralSOS.jl\")\n",
@@ -89,12 +89,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now use spectral minimization and Proximal bundle method to solve first order relaxation of above POP."
+    "We now use spectral minimization and Proximal bundle method to solve the first order relaxation of above POP."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -102,11 +102,10 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n",
-      "  Size of psd matrix: sk=6\n",
-      "  Number of equality trace constraints: m=2\n",
-      "  0.042473 seconds (51.60 k allocations: 2.607 MiB)\n",
-      "**PB solver:"
+      "**Converting the moment relaxation to the standard SDP:\n",
+      "  Size of psd matrix: sk=3\n",
+      "  Number of trace equality constraints: m=2\n",
+      "  0.041903 seconds (50.78 k allocations: 2.784 MiB)\n"
      ]
     },
     {
@@ -120,46 +119,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Iter 1: fx0 8.611295e-01, fx1 0.000000e+00, fy 8.611295e-01, v -9.505735e-04, u 1.000000e+03, i 0\n",
-      "Iter 2: fx0 8.601791e-01, fx1 8.601791e-01, fy 8.601791e-01, v -2.158902e-03, u 1.000000e+03, i 1\n",
-      "Iter 3: fx0 8.592293e-01, fx1 8.592293e-01, fy 8.592293e-01, v -1.845049e-03, u 1.000000e+03, i 2\n",
-      "Iter 4: fx0 8.582800e-01, fx1 8.582800e-01, fy 8.582800e-01, v -1.716257e-03, u 9.709877e+02, i 1\n",
-      "Iter 5: fx0 8.573029e-01, fx1 8.573029e-01, fy 8.573029e-01, v -1.779272e-03, u 8.364012e+02, i 1\n",
-      "Iter 6: fx0 8.561693e-01, fx1 8.561693e-01, fy 8.561693e-01, v -2.145126e-03, u 6.070653e+02, i 1\n",
-      "Iter 7: fx0 8.546087e-01, fx1 8.546087e-01, fy 8.546087e-01, v -3.405050e-03, u 3.308449e+02, i 1\n",
-      "Iter 8: fx0 8.517486e-01, fx1 8.517486e-01, fy 8.517486e-01, v -9.458448e-03, u 1.058940e+02, i 1\n",
-      "Iter 9: fx0 8.428386e-01, fx1 8.428386e-01, fy 8.428386e-01, v -7.758028e-02, u 1.227894e+01, i 1\n",
-      "Iter 10: fx0 7.676641e-01, fx1 7.676641e-01, fy 7.676641e-01, v -7.036444e-01, u 1.227894e+00, i 1\n",
-      "Iter 11: fx0 5.208992e-01, fx1 5.208992e-01, fy 5.208992e-01, v -1.653223e-01, u 1.227894e+00, i 2\n",
-      "Iter 12: fx0 4.681654e-01, fx1 4.681654e-01, fy 4.681654e-01, v -3.637399e-02, u 1.227894e+00, i 3\n",
-      "Iter 13: fx0 4.611143e-01, fx1 4.611143e-01, fy 4.611143e-01, v -1.141668e-02, u 1.227894e+00, i 4\n",
-      "Iter 14: fx0 4.570355e-01, fx1 4.570355e-01, fy 4.570355e-01, v -2.000547e-04, u 6.139470e-01, i 1\n",
-      "Iter 15: fx0 4.570355e-01, fx1 4.570355e-01, fy 4.585194e-01, v 3.220374e-04, u 6.139470e-01, i -1\n",
-      "TERMINATION: Optimal: v = 0.0003220374498860701\n",
-      "  1.031790 seconds (568.09 k allocations: 30.769 MiB)\n",
+      "**PB solver:\n",
+      "Iter 1: fx0 4.682115e-02, fx1 0.000000e+00, fy 4.682115e-02, v -9.973388e-04, u 1.000000e+03, i 0\n",
+      "Iter 2: fx0 4.582462e-02, fx1 4.582462e-02, fy 4.582462e-02, v -1.954759e-03, u 1.000000e+03, i 1\n",
+      "Iter 3: fx0 4.483058e-02, fx1 4.483058e-02, fy 4.483058e-02, v -1.657305e-03, u 9.829579e+02, i 1\n",
+      "Iter 4: fx0 4.382193e-02, fx1 4.382193e-02, fy 4.382193e-02, v -1.780003e-03, u 7.694465e+02, i 1\n",
+      "Iter 5: fx0 4.253721e-02, fx1 4.253721e-02, fy 4.253721e-02, v -2.711996e-03, u 4.281954e+02, i 1\n",
+      "Iter 6: fx0 4.023893e-02, fx1 4.023893e-02, fy 4.023893e-02, v -7.905962e-03, u 1.306408e+02, i 1\n",
+      "Iter 7: fx0 3.279874e-02, fx1 3.279874e-02, fy 3.279874e-02, v -6.097490e-02, u 1.539327e+01, i 1\n",
+      "Iter 8: fx0 -7.516806e-03, fx1 -7.516806e-03, fy -7.516806e-03, v -3.509008e-03, u 1.043101e+01, i 1\n",
+      "Iter 9: fx0 -7.516806e-03, fx1 -7.516806e-03, fy -4.439008e-03, v -1.640532e-03, u 1.043101e+01, i -1\n",
+      "Iter 10: fx0 -7.661903e-03, fx1 -7.661903e-03, fy -7.661903e-03, v -6.849178e-04, u 1.043101e+01, i 1\n",
+      "Iter 11: fx0 -7.967323e-03, fx1 -7.967323e-03, fy -7.967323e-03, v -3.957594e-06, u 1.043101e+01, i 2\n",
+      "TERMINATION: Optimal: v = -3.957593554372932e-6\n",
+      "  1.052478 seconds (558.32 k allocations: 30.184 MiB)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-0.914071013588359\n",
+      "opt_val=0.015934646011392065\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 1\n",
       "------------------------------------\n",
       "atom 1:\n",
       "####################################\n",
-      "It is an approximate optimal solution!!!\n",
+      "It is an approximate optimal solution!\n",
       "####################################\n",
-      "  0.000319 seconds (531 allocations: 32.563 KiB)\n",
-      "  1.074997 seconds (621.20 k allocations: 33.428 MiB)\n"
+      "  0.000298 seconds (427 allocations: 18.234 KiB)\n",
+      "  1.095135 seconds (610.46 k allocations: 33.006 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-0.914071013588359, [-0.150348972119743, -0.05952531708971312, -0.9934740128228765, 0.20030158662356828, -0.03724634613620606])"
+       "(0.015934646011392065, [0.6484622236384777, -0.7687966827560831])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +175,7 @@
     "\n",
     "1) ```opt_val```: the optimal value of the SDP relaxation.\n",
     "\n",
-    "2) ```Optimal solution```: the optimal solution of the POP which is the atom satisfying the constraint and the zero gap of lower bound.\n",
+    "2) ```Optimal solution```: the optimal solution of the POP which is the atom satisfying the constraints and the zero gap of lower bound.\n",
     "\n",
     "3) The total time is the final time above in seconds."
    ]
@@ -197,124 +192,11 @@
     "\n",
     "```adjoint_oper```:  the number of evaluations of the adjoint operator\n",
     "\n",
-    "```max_size```: the largest size of symmetric matrices of which eigenvalues and eigenvec-tors are computed\n",
+    "```max_size```: the largest size of symmetric matrices of which eigenvalues and eigenvectors are computed\n",
     "\n",
-    "```num_eig```: the number of symmetric matrices of which eigenvalues and eigenvectorsare computed\n",
+    "```num_eig```: the number of symmetric matrices of which eigenvalues and eigenvectors are computed\n",
     "\n",
     "2) ```showNormGrad=true``` to display the norms of all subgradients when using LMBM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n",
-      "  Size of psd matrix: sk=6\n",
-      "  Number of equality trace constraints: m=2\n",
-      "  0.042783 seconds (51.60 k allocations: 2.607 MiB)\n",
-      "**SketchyCGAL solver:"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "- SketchyCGAL SDP Solver - Beta.V.0.0\n",
-      "--------------------------\n",
-      " iter=1 \n",
-      " stopObj=0.6960070921534249 \n",
-      " stopFeas=0.5 \n",
-      " primalObj=-0.7718106603868117 \n",
-      "--------------------------\n",
-      " iter=2 \n",
-      " stopObj=1.5392956083103333 \n",
-      " stopFeas=0.7987289247604363 \n",
-      " primalObj=0.10338604254048872 \n",
-      "--------------------------\n",
-      " iter=4 \n",
-      " stopObj=-0.04436735167691497 \n",
-      " stopFeas=0.19843657388439973 \n",
-      " primalObj=-0.19977683464657667 \n",
-      "--------------------------\n",
-      " iter=8 \n",
-      " stopObj=0.3392803679026266 \n",
-      " stopFeas=0.07703392693662549 \n",
-      " primalObj=-0.28071698080251384 \n",
-      "--------------------------\n",
-      " iter=16 \n",
-      " stopObj=0.1752945571794759 \n",
-      " stopFeas=0.04061075161165561 \n",
-      " primalObj=-0.34321058557114315 \n",
-      "--------------------------\n",
-      " iter=32 \n",
-      " stopObj=0.03847805594254905 \n",
-      " stopFeas=0.0010811596400653945 \n",
-      " primalObj=-0.4208660116910211 \n",
-      "--------------------------\n",
-      " iter=64 \n",
-      " stopObj=0.018555960770682445 \n",
-      " stopFeas=0.0009310457206411207 \n",
-      " primalObj=-0.43876933230469023 \n",
-      "--------------------------\n",
-      " iter=128 \n",
-      " stopObj=0.011974812231494547 \n",
-      " stopFeas=8.186828523279448e-5 \n",
-      " primalObj=-0.4449471305894929 \n",
-      "* status = stopping criteria met\n",
-      "  3.091123 seconds (4.44 M allocations: 219.295 MiB, 10.64% gc time)\n",
-      "------------------------------------\n",
-      "**Numerical result:\n",
-      "====================================\n",
-      "opt_val=-0.8900769151977012\n",
-      "====================================\n",
-      "Rank of moment matrix = 6\n",
-      "  0.004146 seconds (408 allocations: 24.453 KiB)\n",
-      "----------------------------\n",
-      "linear_oper=129\n",
-      "adjoint_oper=748\n",
-      "max_size=5\n",
-      "num_eig=130\n",
-      "----------------------------\n",
-      "  3.179832 seconds (4.52 M allocations: 223.455 MiB, 10.34% gc time)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(-0.8900769151977012, Array{Float64,1}[])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "include(\"../src/SpectralSOS.jl\")\n",
-    "using .SpectralSOS\n",
-    "#using SpectralSOS\n",
-    "\n",
-    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"SketchyCGAL\",EigAlg=\"Normal\",tol=1e-4,showEvaluation=true)"
    ]
   },
   {
@@ -329,29 +211,91 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n",
-      "  Size of psd matrix: sk=6\n",
-      "  Number of equality trace constraints: m=2\n",
-      "  0.043485 seconds (51.60 k allocations: 2.607 MiB)\n",
-      "**LMBM solver:"
+      "**Converting the moment relaxation to the standard SDP:\n",
+      "  Size of psd matrix: sk=3\n",
+      "  Number of trace equality constraints: m=2\n",
+      "  0.042033 seconds (50.78 k allocations: 2.550 MiB)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralSOS.\n",
-      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
-      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
-      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
-      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
+      "WARNING: replacing module SpectralSOS.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "**SketchyCGAL solver:\n",
+      "* status = stopping criteria met\n",
+      "  0.916107 seconds (552.24 k allocations: 30.212 MiB)\n",
+      "------------------------------------\n",
+      "**Numerical result:\n",
+      "====================================\n",
+      "opt_val=0.08808863550335501\n",
+      "====================================\n",
+      "Rank of moment matrix = 3\n",
+      "  0.000036 seconds (73 allocations: 3.141 KiB)\n",
+      "----------------------------\n",
+      "linear_oper=147\n",
+      "adjoint_oper=444\n",
+      "max_size=2\n",
+      "num_eig=148\n",
+      "----------------------------\n",
+      "  0.958720 seconds (604.31 k allocations: 32.793 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.08808863550335501, Array{Float64,1}[])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
+    "#using SpectralSOS\n",
+    "\n",
+    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"SketchyCGAL\",EigAlg=\"Normal\",tol=1e-4,showEvaluation=true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Constant trace property (CTP):\n",
+      "**Converting the moment relaxation to the standard SDP:\n",
+      "  Size of psd matrix: sk=3\n",
+      "  Number of trace equality constraints: m=2\n",
+      "  0.056236 seconds (50.77 k allocations: 2.534 MiB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module SpectralSOS.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
       "---------------\n",
@@ -366,36 +310,36 @@
       "| Output: |\n",
       "-----------\n",
       "Termination:     1\n",
-      "N. iter.:        5\n",
-      "N. func. eval.:  5\n",
-      "Final value:     0.456880\n",
-      "Execution time:  0.064148\n",
-      "  1.103943 seconds (717.11 k allocations: 39.558 MiB)\n",
+      "N. iter.:        10\n",
+      "N. func. eval.:  10\n",
+      "Final value:     -0.007968\n",
+      "Execution time:  0.067429\n",
+      "  1.143446 seconds (717.61 k allocations: 39.573 MiB)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-0.9137601399813444\n",
+      "opt_val=0.015935364089888125\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 1\n",
       "------------------------------------\n",
       "atom 1:\n",
       "####################################\n",
-      "It is an approximate optimal solution!!!\n",
+      "It is an approximate optimal solution!\n",
       "####################################\n",
-      "  0.000328 seconds (530 allocations: 29.906 KiB)\n",
+      "  0.000265 seconds (428 allocations: 19.297 KiB)\n",
       "----------------------------\n",
-      "norm_grad=[0.9749796241731851, 0.697810766802533, 0.17548892944189928, 0.05649502926652694, 0.0004722877490290371]\n",
+      "norm_grad=[0.9986737387465388, 1.1176614650514771, 0.9451217363156944, 0.982692061611941, 0.5860964501648946, 1.0445587152289342, 0.3150465349699989, 0.26008590810794224, 0.09042355327474616, 0.0030824206901973036]\n",
       "----------------------------\n",
-      "  1.148366 seconds (770.67 k allocations: 42.224 MiB)\n"
+      "  1.200682 seconds (770.54 k allocations: 42.163 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-0.9137601399813444, [-0.15129201489094574, -0.06145833753564244, -0.9660335579312257, 0.19408424713319633, -0.039994645542955815])"
+       "(0.015935364089888125, [0.6417095946579322, -0.7633544096131458])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -419,10 +363,10 @@
      "text": [
       "**SumOfSquares+Mosek:\n",
       "OPTIMAL\n",
-      "opt_val=-0.9137600396071252\n",
-      "Atomic measure on the variables x[1], x[2], x[3], x[4], x[5] with 1 atoms:\n",
-      " at [-0.1512345871368859, -0.06139485688847032, -0.9664661474260309, 0.19418528662578574, -0.03992504075341364] with weight 1.0000000008743322\n",
-      "  0.010129 seconds (10.81 k allocations: 1.182 MiB)\n"
+      "opt_val=0.01593557954187779\n",
+      "Atomic measure on the variables x[1], x[2] with 1 atoms:\n",
+      " at [0.6439010547922033, -0.7651087701644322] with weight 0.9999999991884458\n",
+      "  0.008826 seconds (5.53 k allocations: 526.141 KiB)\n"
      ]
     },
     {
@@ -435,10 +379,10 @@
     {
      "data": {
       "text/plain": [
-       "(-0.9137600396071252, [-0.1512345871368859, -0.06139485688847032, -0.9664661474260309, 0.19418528662578574, -0.03992504075341364])"
+       "(0.01593557954187779, [0.6439010547922033, -0.7651087701644322])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -464,8 +408,8 @@
      "text": [
       "**SumOfSquares+Mosek:\n",
       "OPTIMAL\n",
-      "opt_val=-0.9137600396051277\n",
-      "  0.008995 seconds (9.45 k allocations: 903.016 KiB)\n"
+      "opt_val=0.015935579541873336\n",
+      "  0.006636 seconds (4.83 k allocations: 374.703 KiB)\n"
      ]
     },
     {
@@ -478,10 +422,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.9137600396051277"
+       "0.015935579541873336"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,12 +448,12 @@
     "\n",
     "1) ```opt_val```: the optimal value of the SDP relaxation.\n",
     "\n",
-    "2) The total time is the final time above in seconds."
+    "2) The total time is both the time to model the problem and the time spent by the SDP solver to compute ```opt_val```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
